samples/_failures_safe/1761491450_b7ac09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee236cde.c: In function ‘main’:
./samples/SAFE/__tmp_ee236cde.c:150:5: error: expected declaration or statement at end of input
  150 |     int distances[MAX_NODES];
      |     ^~~
